--- a/config/database.yml
+++ b/config/database.yml
@@ -33,7 +33,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   adapter: postgresql
   encoding: unicode
   database: aliasmadness_test
@@ -48,3 +48,6 @@ production:
   pool: 5
   username: ibualia
   password: 1337
+
+cucumber:
+  <<: *test
