Updates with some changes for the mailer and asset pipeline

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,13 +1,19 @@
 ---
-rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-2a4459ba21fae1f7572c3bbd0ce067da.js
-application/index.js: application-2a4459ba21fae1f7572c3bbd0ce067da.js
-application.css: application-1b13569e9620782f423d4cd3ce931750.css
-application/index.css: application-1b13569e9620782f423d4cd3ce931750.css
-jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
-jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
-glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
-glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
-glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
-glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+rails.png: rails-71e944d9b39043eba50b77788c0d767f.png
+rails/index.png: rails-71e944d9b39043eba50b77788c0d767f.png
+application.js: application-32fc627a1d51558d9b2ad4609478c48e.js
+application/index.js: application-32fc627a1d51558d9b2ad4609478c48e.js
+application.css: application-2562abe1308898153f855be210a8af9b.css
+application/index.css: application-2562abe1308898153f855be210a8af9b.css
+bad_programmer_error.rb: bad_programmer_error-8de2c6935ecd0a7f627025469861c825.rb
+bad_programmer_error/index.rb: bad_programmer_error-8de2c6935ecd0a7f627025469861c825.rb
+template_format_error.rb: template_format_error-59675bef4d43f9f8239db1a17067b998.rb
+template_format_error/index.rb: template_format_error-59675bef4d43f9f8239db1a17067b998.rb
+directed_adjacency_graph.rb: directed_adjacency_graph-9fe8c40973c865448b4a626b5e209c96.rb
+directed_adjacency_graph/index.rb: directed_adjacency_graph-9fe8c40973c865448b4a626b5e209c96.rb
+store-master/LICENSE.md: store-master/LICENSE-c35e84658f112c03c4adbcd34806c0ff.md
+store-master/LICENSE/index.md: store-master/LICENSE-c35e84658f112c03c4adbcd34806c0ff.md
+store-master/README.textile: store-master/README-a74503e72fc70cf83630b8432881848d.textile
+store-master/README/index.textile: store-master/README-a74503e72fc70cf83630b8432881848d.textile
+jquery.min.map: jquery.min-c5a89be96c8d2def857e2657b2c155c0.map
+jquery/index.min.map: jquery.min-c5a89be96c8d2def857e2657b2c155c0.map
