don't compile assets fix nil debugging, that probably isn't necessary anymore.... App seems working, but there's one bug in the tests that may mask a bug in the invite process -- fix tests to be more modular to identify this later

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,7 @@
 development:
   adapter: postgresql
   encoding: unicode
+  host: localhost
   database: aliasmadness_development
   pool: 5
   username: ibualia
@@ -37,6 +38,7 @@ test: &test
   adapter: postgresql
   encoding: unicode
   database: aliasmadness_test
+  host: localhost
   pool: 5
   username: ibualia
   password: 1337
@@ -45,6 +47,7 @@ production:
   adapter: postgresql
   encoding: unicode
   database: aliasmadness_production
+  host: localhost
   pool: 5
   username: ibualia
   password: 1337
