--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,15 @@
 # Ignore bundler config
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
 
-/.idea/*
+/.idea/.*
 .env
 
 # Obviously ignore emacs backup files.
 *~
+
+
+.idea/AliasMadness.iml
