don't compile assets fix nil debugging, that probably isn't necessary anymore.... App seems working, but there's one bug in the tests that may mask a bug in the invite process -- fix tests to be more modular to identify this later

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,13 @@
 /log/*.log
 /tmp
 
-/.idea/.*
+/.idea
 .env
 
 # Obviously ignore emacs backup files.
 *~
 
+.heroku_init.sh
+public/assets
 
-.idea/AliasMadness.iml
+.heroku_test_init.sh
