Compile assets in production, step one. Gem updates after ruby 2.7.7 Get cucumber stories in shape

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ coverage/*
 /config/master.key
 
 /config/credentials/production.key
+/public/assets/*.js
+/public/assets/*.js.gz
+/public/assets/*.css
+/public/assets/*.css.gz
